[tool.poetry]
name = "fan-pwm"
version = "0.1.0"
description = "Control a GPIO PWM fan"
authors = ["Fabian Viöl <f.vioel@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
packages = [{include = "fan_pwm"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
daemonize = "^2.5.0"
gpiozero = "^1.6.2"
pigpio = "^1.78"
xdg = "^5.1.1"

[tool.poetry.scripts]
fan-pwm = "fan_pwm:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
